--- a/_output.yml
+++ b/_output.yml
@@ -1,4 +1,5 @@
 bookdown::gitbook:
+  split_bib: no
   css: style.css
   config:
     toc:
@@ -8,4 +9,4 @@ bookdown::gitbook:
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     edit:  https://github.com/USERNAME/REPO/edit/BRANCH/%s
     download: ["pdf", "epub"]
-  
+    split_bib: FALSE
